infra/k8s/mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-depl
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          imagePullPolicy: IfNotPresent
          args: ['--default-authentication-plugin=mysql_native_password']
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-pv-claim
      volumes:
        - name: mysql-pv-claim
          persistentVolumeClaim:
            claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-srv
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
