infra/k8s/adminer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-srv
spec:
  selector:
    app: adminer
  type: ClusterIP
  ports:
    - name: adminer
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: adminer-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: adminer.local
      http:
        paths:
          - path: /
            backend:
              serviceName: adminer-srv
              servicePort: 8080
