infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: app.local
      http:
        paths:
          - path: /api/demo/?(.*)
            backend:
              serviceName: backend-srv
              servicePort: 3000
